--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@types/react-dom": "18.2.7",
     "next": "13.4.19",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.66.1"
   },
   "devDependencies": {
     "@types/node": "^20.5.9",
