--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@prisma/client": "^5.2.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "classnames": "^2.3.2",
+    "cloudinary": "^1.40.0",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.46.1",
+    "react-inlinesvg": "^4.0.3",
     "sass": "^1.66.1"
   },
   "devDependencies": {
